--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
 .row {
     margin: 0.5rem;;
 }
+.container-sm{
+    margin-left: 0.5rem;
+}
 .card-group{
     margin-left: 2.9rem;
     width: 100%;
