--- a/style.css
+++ b/style.css
@@ -120,21 +120,30 @@ width: 100%;
 
 @media (min-width:320px){
     .columna2-footer{
-        margin:1.4rem -13.7rem;
-        font-size: .5rem;                  
-        
+        margin-left:-15.9rem ;
+        margin-bottom: -8rem;
+        font-size: 6px;       
+    }
+    .ancho{
+        width: 160px;                
+    }
+    .ancho-col3{
+        width: 100px;
     }
     .contenedor-col1 {
-             text-align: center;    
+             text-align: left;    
     }
     .yb{
         margin-left: 0.2rem;
     }
     .bi-instagram{
-        margin-left: 1.6rem;
+        margin-left: 1rem;
         
     }
     .bi-youtube{
         margin-left: 0.2rem;
         margin-bottom: 1.rem;
     }
+}
+
+
