--- a/style.css
+++ b/style.css
@@ -59,6 +59,47 @@
     height: 1.6rem;
     width: 100%;
 }
+div .precio-en-head{
+    width: 3.5rem;
+    font-weight: bolder;
+}
+div .min-valor{
+    width: 1.5rem;
+    margin-top: -10px ;
+    font-size: 0.7rem;
+    font-weight: bolder;
+}
+.input-en-min-valor input{
+    width: 2.5rem;
+    border-radius: .3rem;
+    text-align: center;
+    position: absolute;
+    left: 3.1rem;
+    top: 18.3rem;
+}
+.guion{
+    font-weight: bolder;
+    position: absolute;
+    left: 6rem;
+    top: 18.5rem;
+}
+.max-valor{
+    font-weight: bolder;
+    width: 2.5rem;
+    border-radius: .3rem;
+    text-align: center;
+    position: absolute;
+    left: 6.2rem;
+    top: 18.5rem;
+}
+.input-en-max-valor input{
+    position: absolute;
+    left: 8.6rem;
+    top: 18.3rem;
+    width: 2.5rem;
+    border-radius: .3rem;
+    text-align: center;
+}
 .sale-feria{
     font-size: 1rem;
     font-weight: bolder;
@@ -145,5 +186,3 @@ width: 100%;
         margin-bottom: 1.rem;
     }
 }
-
-
