--- a/style.css
+++ b/style.css
@@ -1,46 +1,188 @@
+:root{
+    --bs-body-font-family:'Raleway', sans-serif;
+    --bs-bg-opacity:5;            
+}
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-section{
+.row {
+    margin: 0;;
+}
+.columna2-footer{
     display: flex;
-    flex-wrap: wrap;    
+    flex-direction: column;
+    align-items: self-end;
+    justify-content: flex-end;
+    min-height: 100%;
+    font-size: 0.7rem;
+    width:25rem;
+    margin-left: 0rem;
+    color: aliceblue;     
 }
-section div{
-    outline: 1px  solid black;
-    flex-grow: 1;
+.bg-secundary{
+    outline: 1px solid red;
+    margin: auto;
 }
-    section div{
-        background-color: red;
-        flex-direction: column;
-        flex-basis: 100%;
-    }
-/*hasta 576px se muestra en una sola columna*/
+.container-fluid{
+    width: 104%;
+}
+.container-sm{
+    margin-left: 0.5rem;
+}
+.card-group{
+    margin-left: 2.9rem;
+    width: 100%;
+    column-gap: 0.5rem;
+}
+.col-10 img{
+    margin-left:0rem;
+}
+.col-10{
+    flex: 0 0 auto;
+    width: 80%;
+    margin-left: 0;
+}
+.col-2{
+    flex: 1 0 150px;
+}
+.form-label{
+    font-size: 0.8rem;
+    font-weight: bolder;
+}
+.form-control{
+    font-size: 0.7rem;
+}
+.tamanio-select{
+    font-size: 0.7rem;
+    height: 1.6rem;
+    width: 100%;
+}
+div .precio-en-head{
+    width: 3.5rem;
+    font-weight: bolder;
+}
+div .min-valor{
+    width: 1.5rem;
+    margin-top: -10px ;
+    font-size: 0.7rem;
+    font-weight: bolder;
+}
+.input-en-min-valor input{
+    width: 2.5rem;
+    border-radius: .3rem;
+    text-align: center;
+    position: absolute;
+    left: 3.1rem;
+    top: 18.3rem;
+}
+.guion{
+    font-weight: bolder;
+    position: absolute;
+    left: 6rem;
+    top: 18.5rem;
+}
+.max-valor{
+    font-weight: bolder;
+    width: 2.5rem;
+    border-radius: .3rem;
+    text-align: center;
+    position: absolute;
+    left: 6.2rem;
+    top: 18.5rem;
+}
+.input-en-max-valor input{
+    position: absolute;
+    left: 8.6rem;
+    top: 18.3rem;
+    width: 2.5rem;
+    border-radius: .3rem;
+    text-align: center;
+}
+.sale-feria{
+    font-size: 1rem;
+    font-weight: bolder;
+    margin-left: 1rem;
+}
+.tamanio-select{
+    font-size: 0.7rem;
+}
+.bi{
+    color: fuchsia;
+    margin: 0;
+    padding: 0;
+}
+.copy-reserved{
+    margin-left:20.5rem;    
+    font-size: 0.8rem;
+}
+.caja-iconos{
+    display: flex;
+    flex-direction: row;
+    margin-left: 43.5rem;
+    outline: 1px solid white;
+    justify-content: start;
+}
+.facebook{
+    margin-left:.5rem;
+    color: blue;
+}
+.foot{
+display: flex;
+flex-direction: row;
+justify-content: center;
+width: 100%;
+}
+.texto-autor{
+    margin-left: 2rem;
+}
+.ancho-foto{
+    height: 18rem;
+    margin: 0;
+}
+.columna2-{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    margin-left:auto;
+}
 
-    @media (min-width:320px){
-        section div{
-            background-color: green;
-            flex-basis:25%;            
-        }
-    }    
+.colorr:hover{
+    color:yellow ;
+}
+.yb{
+    margin-left: 0.5rem;
+}
+.linked-in{
+    margin-right:0.5rem ;
+    color: blue;
+}
 
-    @media (min-width:576px){
-        section div{
-            background-color: gray;
-            flex-basis:25%;            
-        }
+@media (min-width:320px){
+    .columna2-footer{
+        margin-left:-15.9rem ;
+        margin-bottom: -8rem;
+        font-size: 6px;       
     }
-    @media (min-width:760px){
-        section div{
-            background-color: cadetblue;
-            flex-basis:50%;            
-        }
-    }    
-        @media (min-width:980px){
-            section div{
-                background-color:crimson;
-                flex-basis:100%;                
-            }    
+    .ancho{
+        width: 160px;                
     }
-    
+    .ancho-col3{
+        width: 100px;
+    }
+    .contenedor-col1 {
+             text-align: left;    
+    }
+    .yb{
+        margin-left: 0.2rem;
+    }
+    .bi-instagram{
+        margin-left: 1rem;
+        
+    }
+    .bi-youtube{
+        margin-left: 0.2rem;
+        margin-bottom: 1.rem;
+    }
+}
