--- a/style.css
+++ b/style.css
@@ -59,16 +59,19 @@
     height: 1.6rem;
     width: 100%;
 }
+
 div .precio-en-head{
     width: 3.5rem;
     font-weight: bolder;
 }
+
 div .min-valor{
     width: 1.5rem;
     margin-top: -10px ;
     font-size: 0.7rem;
     font-weight: bolder;
 }
+
 .input-en-min-valor input{
     width: 2.5rem;
     border-radius: .3rem;
@@ -84,7 +87,6 @@ div .min-valor{
     top: 18.5rem;
 }
 .max-valor{
-    font-weight: bolder;
     width: 2.5rem;
     border-radius: .3rem;
     text-align: center;
@@ -93,9 +95,6 @@ div .min-valor{
     top: 18.5rem;
 }
 .input-en-max-valor input{
-    position: absolute;
-    left: 8.6rem;
-    top: 18.3rem;
     width: 2.5rem;
     border-radius: .3rem;
     text-align: center;
@@ -158,8 +157,54 @@ width: 100%;
     margin-right:0.5rem ;
     color: blue;
 }
-
 @media (min-width:320px){
+    .max-valor{
+        width: 2.5rem;
+        margin-top: -5rem ;
+        margin-left: -0.2rem;
+        border-radius: .3rem;
+        text-align: center;
+    }
+    .input-en-min-valor input{
+        width: 15rem;
+        border-radius: .3rem;
+        text-align: center;
+        position: absolute;
+        left: 3.3rem;
+        top: 18.3rem;
+    }    
+    .guion{
+        display: none;
+        font-weight: bolder;
+        position: absolute;
+        left: 6rem;
+        top: 18.5rem;
+    }
+    div .min-valor{
+        width: 1.5rem;
+        margin-top: -.5rem ;
+        font-size: 0.8rem;
+        font-weight: bolder;
+    }
+    .col-10{
+        flex: 0 0 auto;
+        width: 80%;
+        margin-left: -1;
+        margin-top: 2.5rem;
+    }
+    .input-en-max-valor input{
+        position: absolute;
+        left: 3.4rem;
+        top: 20.6rem;
+        width: 14.9rem;    
+    }
+    .max-valor{
+        font-weight: bolder;
+        width: 2.5rem;
+        position: absolute;
+        left: 1.2rem;
+        top: 25.7rem;
+    }
     .columna2-footer{
         margin-left:-15.9rem ;
         margin-bottom: -8rem;
