--- a/style.css
+++ b/style.css
@@ -158,6 +158,10 @@ width: 100%;
     color: blue;
 }
 @media (min-width:320px){
+    .col-2 {
+    flex: 100%;
+    width: 17.666667%;
+   }
     .max-valor{
         width: 2.5rem;
         margin-top: -5rem ;
