--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ width: 100%;
 }
 @media (min-width:320px){
     .col-2 {
-    flex: 100%;
+    flex-basis: 100%;
     width: 17.666667%;
    }
     .max-valor{
