--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ width: 100%;
 }
 @media (min-width:320px){
     .col-2 {
+    outline:5px solid white;
     flex-basis: 100%;
     width: 17.666667%;
     }
